[gd_scene load_steps=3 format=2]

[ext_resource path="res://CollectibleManager.gd" type="Script" id=1]
[ext_resource path="res://CollectibleManagerOverlay.tscn" type="PackedScene" id=2]

[node name="CollectibleManager" type="Node"]
script = ExtResource( 1 )

[node name="VictorySound" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="CollectibleManagerOverlay" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
